Updated build script

--- a/build.properties
+++ b/build.properties
@@ -20,8 +20,12 @@
 #
 # For any inquiry or need additional information, please contact support-qaf@infostretch.com
 #******************************************************************************
+artifact.name=qaf-support
 version-num=2.1
-build-num=11
+build-num=14
+#-SNAPSHOT
+publish.resolver=nexus-releases
+#snapshots
 release.num=${version-num}.${build-num}
 lib.dir=./lib
 dist.dir=build/artifacts/jars/
