--- a/build.xml
+++ b/build.xml
@@ -194,21 +194,25 @@ For any inquiry or need additional information, please contact support-qaf@infos
 	</target>
 
 	<target name="publish" depends="init, build">
-		<!-- Determine build number from previously published revisions -->
-		<ivy:buildnumber resolver="local-m2-publish" organisation="${ivy.organisation}" module="${ivy.module}" revision="${release.num}" />
+	<!-- Determine build number from previously published revisions -->
+	<ivy:buildnumber resolver="${publish.resolver}" organisation="${ivy.organisation}" module="${ivy.module}" revision="${release.num}" />
 
-		<!-- Resolve ivy dependencies and create a Maven POM file -->
-		<ivy:deliver deliverpattern="${dist.dir}/ivy.xml" pubrevision="${release.num}" status="release" />
-		<ivy:makepom ivyfile="${dist.dir}/ivy.xml" pomfile="${dist.dir}/qaf-support.pom">
-			<mapping conf="*,default" scope="compile" />
-		</ivy:makepom>
+	<!-- Resolve ivy dependencies and create a Maven POM file -->
+	<ivy:deliver deliverpattern="${dist.dir}/ivy.xml" pubrevision="${release.num}" status="release" />
+	<ivy:makepom ivyfile="${dist.dir}/ivy.xml" pomfile="${dist.dir}/${artifact.name}.pom">
+		<mapping conf="compile" scope="compile" />
+		<mapping conf="runtime" scope="runtime" />
+		<mapping conf="test" scope="test" />
+		<mapping conf="provided" scope="provided" />
+	</ivy:makepom>
 
-		<!-- Publish the local repo. Defaults to ~/.ivy2/local -->
-		<ivy:publish resolver="local-m2-publish" forcedeliver="true" publishivy="true" pubrevision="${release.num}" overwrite="true">
-			<artifacts pattern="${dist.dir}/[artifact].[ext]" />
-			<artifact name="qaf-support" pattern="${dist.dir}/[artifact].[ext]" ext="pom" type="pom" version="${release.num}" />
-			<artifact name="qaf-support-sources" pattern="${dist.dir}/[artifact].[ext]" ext="jar" classifier="sources" type="sources" version="${release.num}" />
-			<artifact name="qaf-support-javadoc" pattern="${dist.dir}/[artifact].[ext]" ext="jar" classifier="javadoc" type="javadoc" version="${release.num}" />
-		</ivy:publish>
+	<!-- Publish the local repo. Defaults to ~/.ivy2/local -->
+	<ivy:publish resolver="${publish.resolver}" forcedeliver="true" publishivy="false" pubrevision="${release.num}" overwrite="true">
+		<artifacts pattern="${dist.dir}/[artifact](-[classifier]).[ext]" />
+		<artifact name="${artifact.name}" pattern="${dist.dir}/[artifact].[ext]" ext="pom" type="pom" version="${release.num}" />
+		<artifact name="${artifact.name}" pattern="${dist.dir}/[artifact].[ext]" ext="jar" classifier="sources" type="sources" version="${release.num}" />
+		<artifact name="${artifact.name}" pattern="${dist.dir}/[artifact].[ext]" ext="jar" classifier="javadoc" type="javadoc" version="${release.num}" />
+	</ivy:publish>
 	</target>
+
 </project>
