--- a/build.properties
+++ b/build.properties
@@ -21,11 +21,14 @@
 #******************************************************************************
 artifact.name=qaf-support
 version-num=2.1
-build-num=15-SNAPSHOT
+build-num=15-beta-3
 #-SNAPSHOT
-publish.resolver=nexus-snapshots
+publish.resolver=nexus-staging
 #snapshots
 #releases
+status=release
+#snapshots
+#release
 release.num=${version-num}.${build-num}
 lib.dir=./lib
 dist.dir=build/artifacts/jars/
