--- a/build.xml
+++ b/build.xml
@@ -198,8 +198,8 @@ For any inquiry or need additional information, please contact support-qaf@infos
 	<ivy:buildnumber resolver="${publish.resolver}" organisation="${ivy.organisation}" module="${ivy.module}" revision="${release.num}" />
 
 	<!-- Resolve ivy dependencies and create a Maven POM file -->
-	<ivy:deliver deliverpattern="${dist.dir}/ivy.xml" pubrevision="${release.num}" status="release" />
-	<ivy:makepom ivyfile="${dist.dir}/ivy.xml" pomfile="${dist.dir}/${artifact.name}.pom">
+	<ivy:deliver deliverpattern="${dist.dir}/ivy.xml" pubrevision="${release.num}" status="${status}" />
+	<ivy:makepom ivyfile="${dist.dir}/ivy.xml" pomfile="${dist.dir}/${artifact.name}.pom" templatefile="pom.tmpl">
 		<mapping conf="compile" scope="compile" />
 		<mapping conf="runtime" scope="runtime" />
 		<mapping conf="test" scope="test" />
