--- a/ivy.xml
+++ b/ivy.xml
@@ -23,10 +23,16 @@
 
 	<dependencies>
 		<dependency org="com.qmetry" name="qaf" rev="latest.integration" conf="provided->default"/>
-		<dependency org="org.aspectj" name="aspectjtools" rev="1.8.9">
+		<dependency org="org.aspectj" name="aspectjtools" rev="1.8.9" conf="provided->default">
 			<artifact name="aspectjtools" type="jar"></artifact>
 		</dependency>
-				
+		<dependency org="org.aspectj" name="aspectjrt" rev="1.8.9" conf="provided->default">
+			<artifact name="aspectjrt" type="jar"></artifact>
+		</dependency>
+
+		<dependency org="org.aspectj" name="aspectjweaver" rev="1.8.9" conf="provided->default">
+			<artifact name="aspectjweaver" type="jar"></artifact>
+		</dependency>	
 		<!--  ws  
 		<dependency org="xmlunit" name="xmlunit" rev="1.4" />
 		<dependency org="org.xmlmatchers" name="xml-matchers" rev="latest.integration" />
