--- a/ivy.xml
+++ b/ivy.xml
@@ -22,7 +22,7 @@
     </configurations>
 
 	<dependencies>
-		<dependency org="com.qmetry" name="qaf" rev="latest.integration" conf="provided->default"/>
+		<dependency org="com.qmetry" name="qaf" rev="latest.integration" conf="compile->default"/>
 		<dependency org="org.aspectj" name="aspectjrt" rev="1.9.5" conf="compile->default">
 			<artifact name="aspectjrt" type="jar"></artifact>
 		</dependency>
